cleaning code smell